# ai_chatbot

./: README.md  pyproject.toml
src/knowledge_rag/: __init__.py  config.py
src/knowledge_rag/app/chat/: chat.py
src/knowledge_rag/app/providers/: __init__.py  anthropic_client.py  llm_factory.py  llm_interface.py  openai_client.py
src/knowledge_rag/frontend/: gradio_app.py  gradio_logic.py
